[gd_scene load_steps=2 format=3 uid="uid://bwtpjkr3xakir"]

[ext_resource type="Script" uid="uid://bpyic1w158pkn" path="res://scripts/UI/MainMenu.gd" id="1_11hie"]

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_11hie")

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="TextureRect"]
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 424.0
offset_top = -246.0
offset_right = -370.0
offset_bottom = -90.0
grow_horizontal = 2
grow_vertical = 0
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="MenuOptions" type="VBoxContainer" parent="TextureRect/MarginContainer"]
layout_mode = 2

[node name="PlayButton" type="Button" parent="TextureRect/MarginContainer/MenuOptions"]
layout_mode = 2
text = "Jogar"

[node name="OptionsButton" type="Button" parent="TextureRect/MarginContainer/MenuOptions"]
layout_mode = 2
size_flags_vertical = 8
text = "Opções"

[node name="CreditsButton" type="Button" parent="TextureRect/MarginContainer/MenuOptions"]
layout_mode = 2
text = "Créditos"

[node name="QuitButton" type="Button" parent="TextureRect/MarginContainer/MenuOptions"]
layout_mode = 2
text = "Sair"

[connection signal="pressed" from="TextureRect/MarginContainer/MenuOptions/PlayButton" to="." method="_on_botao_jogar_pressionado"]
[connection signal="pressed" from="TextureRect/MarginContainer/MenuOptions/OptionsButton" to="." method="_on_botao_opcoes_pressionado"]
[connection signal="pressed" from="TextureRect/MarginContainer/MenuOptions/CreditsButton" to="." method="_on_botao_creditos_pressionado"]
[connection signal="pressed" from="TextureRect/MarginContainer/MenuOptions/QuitButton" to="." method="_on_botao_sair_pressionado"]
